server: add / change position of devices in menus
